--- a/vite-frontend/package.json
+++ b/vite-frontend/package.json
@@ -1,7 +1,7 @@
 {
   "name": "flux-panel",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.4",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -48,11 +48,13 @@
     "@tailwindcss/vite": "4.1.11",
     "@types/react-beautiful-dnd": "^13.1.8",
     "axios": "^1.11.0",
+    "echarts": "^5.5.0",
     "clsx": "2.1.1",
     "framer-motion": "11.18.2",
     "react": "18.3.1",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "18.3.1",
+    "react-is": "^18.3.1",
     "react-hot-toast": "^2.5.2",
     "react-router-dom": "6.23.0",
     "recharts": "^3.1.1",
